--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 			<artifactId>json</artifactId>
 			<version>20160810</version>
 		</dependency>
+	
 		
 		<!-- Spring -->
 		<dependency>
@@ -45,7 +46,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency> 
-           
+        
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
 		  
   		<!--  SGBD -->
 		<dependency>
@@ -57,6 +63,7 @@
     </dependencies>
 
     <properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	    <maven.compiler.target>1.8</maven.compiler.target>
 	    <maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
